# BytePet

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-macos.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic_compat.rs  gemini_native.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/resources/: mod.rs
src/app/: App.tsx
src/components/: ActionBar.tsx  BoxButton.tsx  ChatPanel.tsx  CompactStats.tsx  FeedPanel.tsx  MemoryPanel.tsx  PanelShell.tsx  PetSprite.tsx  SettingsPanel.tsx  SkinPanel.tsx  StatBar.tsx  StatsPanel.tsx  ThemePanel.tsx  ToolboxPopover.tsx  boxLayout.ts
src/config/: aiProviders.ts  animationStates.generated.json  defaultFoods.ts  petRules.ts
src/hooks/: useClickThrough.ts
src/storage/database/: mockData.ts  tauriClient.ts
src/stores/: useAppStore.ts
src/systems/affection/: affection.ts
src/systems/animation/: frameResolver.ts
src/systems/energy/: energy.ts
src/systems/food/: foodRules.ts
src/systems/memory/: memoryRules.ts
src/systems/movement/: behavior.ts  constants.ts
src/systems/physics/: engine.ts
src/systems/settings/: resetRules.ts  (+1 more)
src/tests/: coreRules.test.ts  physics.test.ts
src/theme/: theme.ts
src/types/: domain.ts  tauri.d.ts
src/utils/: clamp.ts  date.ts
(+4 files in other folders)
