[package]
name = "bytepet"
version = "0.1.0"
description = "BytePet desktop pet"
authors = ["BytePet"]
license = "MIT"
edition = "2021"

[lib]
name = "bytepet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
once_cell = "1"
rfd = "0.15"
